--- a/Project development phase/Sprint 3/templates/signup.html
+++ b/Project development phase/Sprint 3/templates/signup.html
@@ -30,7 +30,7 @@
                 <input type="password" placeholder="Password" required>
             </label>
             <br><br>
-            <button type="submit" class="form-control"><a href="login.html">SIGN UP</a></button>
-             <p class="text-center">Already have an account? <a data-toggle="tab" href="login.html">Sign In</a></p>
+            <button type="submit" class="form-control"><a href="/">SIGN UP</a></button>
+             <p class="text-center">Already have an account? <a data-toggle="tab" href="/">Sign In</a></p>
     </center>
 </body>
