--- a/Project development phase/Sprint 3/templates/login.html
+++ b/Project development phase/Sprint 3/templates/login.html
@@ -74,7 +74,7 @@
                                 <button type="submit" class="form-control btn btn-primary rounded submit px-3"><a href="/home">SIGN IN</a></button>
                                 </div>
                               </form>
-                              <p class="text-center">Not a member? <a data-toggle="tab" href="/signup.html">Sign Up</a></p>
+                              <p class="text-center">Not a member? <a data-toggle="tab" href="/signup">Sign Up</a></p>
                             </div>
                           </div>
                             </div>
